Update: Add command for running nyc test report generator

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Algorithms Library in JavaScript",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "report": "nyc mocha"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "nyc": "^10.1.2"
   }
 }
