--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Algorithms Library in JavaScript",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --recursive",
     "report": "nyc mocha",
     "lint": "eslint ./src ./test"
   },
