--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "lint": "eslint ./src ./test",
     "all": "npm run test && npm run lint",
     "docs": "doxdox 'src/**/*.js' --layout bootstrap --output docs/index.html && doxdox 'src/**/*.js' --layout markdown --output docs/README.md",
-    "build": "gulp build-prod",
-    "build-dev": "gulp build-dev",
-    "watch": "gulp watch"
+    "build-dev": "webpack",
+    "build-prod": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -24,21 +23,20 @@
   },
   "homepage": "https://github.com/ManrajGrover/algorithms-js#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "^14.3.0",
     "doxdox": "^2.0.3",
     "eslint": "^3.17.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
-    "gulp": "^3.9.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^2.1.2",
     "mocha": "^3.2.0",
     "nyc": "^11.3.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "webpack": "^3.10.0"
+  },
+  "dependencies": {
+    "babel": "^6.23.0"
   }
 }
