--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "algorithms-js",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "Algorithms Library in JavaScript",
   "main": "src/index.js",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "test": "mocha --recursive",
@@ -26,17 +27,17 @@
   },
   "homepage": "https://github.com/ManrajGrover/algorithms-js#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "doxdox": "^2.0.3",
-    "eslint": "^3.17.1",
+    "eslint": "^5.2.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
-    "mocha": "^3.2.0",
-    "nyc": "^11.3.0",
-    "webpack": "^3.10.0"
+    "mocha": "^5.2.0",
+    "nyc": "^13.0.1",
+    "webpack": "^4.16.2"
   }
 }
